# IQX

./: .gitignore
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/.playwright-mcp/: api-responses.json  network-api-requests.md  network-nhiet-do.md  network-tu-doanh.md  page-2026-04-25T03-41-02-930Z.yml  page-2026-04-25T03-42-53-239Z.yml  page-2026-04-25T04-02-32-030Z.yml  page-2026-04-25T04-20-14-020Z.yml  page-2026-04-25T04-26-37-040Z.yml  page-2026-04-25T04-27-21-892Z.yml  page-2026-04-25T04-27-45-279Z.yml
backend/alembic/: env.py
backend/alembic/versions/: 000000000001_initial_schema.py  0094209a663e_add_premium_subscription_tables.py  218cd5d6ac36_add_virtual_trading_tables.py  3819c1575feb_merge_first_last_name_into_full_name.py  3a7f2b1c4d9e_add_lessons_tables.py  488c85bb0b6a_add_refresh_tokens_table.py  66b36f343615_add_refunded_to_payment_order_status.py  8095374275be_add_subscription_cancelled_fields.py  83fe4c37a788_add_premium_to_user_role_enum.py  8556b49b7203_add_admin_audit_log.py  8823d69d4667_seed_trial_7d_plan.py  89061ed0faaa_create_users_table.py  97f9d297c95e_add_account_freeze_and_login_history.py  a1b2c3d4e5f6_add_symbols_table.py  b28593ffa31f_use_timestamptz_columns.py  b668bde3d2ac_create_users_table.py  b869a2a74654_add_plans_subscriptions_payment_orders.py  bce6d181d7bd_relax_episodes_check_for_pending_upload.py  c1d2e3f4a5b6_add_watchlist_items_table.py  d390a8737111_add_sepay_ipn_logs_table.py  d4e5f6a7b8c9_add_timestamps_to_virtual_trades.py  faeec52ea69f_add_ipn_logs_and_billing_snapshots.py  fb7a64f07299_add_premium_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  deps_audit.py
backend/app/core/: __init__.py  config.py  database.py  email_tokens.py  exceptions.py  logging.py  rate_limit.py  request_id.py  security.py
backend/app/dependencies/: auth.py  premium.py
backend/app/models/: __init__.py  admin_audit.py  base.py  ipn_log.py  lesson.py  login_history.py  payment_ipn_log.py  payment_order.py  plan.py  premium.py  refresh_token.py  subscription.py  symbol.py  user.py  (+2 more)
backend/docs/: SECURITY.md  code-review-2026-04-25.md  code-review-2026-04-26.md  company-statistics-api-map.md  market-data-source-map.md  vietcap-ai-news-api-discovery.md  vietcap-market-overview-api-supplement.md  vietcap-market-overview-api.md  vietcap-screening-api.md  vietcap-sector-api.md  virtual-trading.md
backend/tests/: conftest.py  test_admin_audit_endpoint.py  test_admin_audit_service.py  test_admin_audit_wiring.py  test_admin_ipn.py  test_admin_metrics.py  test_admin_payments.py  test_admin_subscriptions.py  test_admin_system.py  test_admin_users.py  test_admin_vt.py  test_admin_vt_360.py  test_ai_analysis.py  test_ai_endpoints_require_premium.py  test_ai_news.py  test_ai_payload_and_batch.py  test_ai_scoring.py  test_auth.py  test_bctc_ai_endpoint.py  test_bctc_ai_guard.py  test_bctc_ai_payload.py  test_bctc_ai_service.py  test_bctc_assemble.py  test_bctc_bank_aggregates.py  test_bctc_bank_dupont.py  test_bctc_dupont.py  test_bctc_endpoint.py  test_bctc_forensic.py  test_bctc_forensic_scores.py  test_bctc_kpi_bank.py  test_bctc_kpi_bank_modules.py  test_bctc_kpi_nonbank.py  test_bctc_kpi_nonbank_modules.py  test_bctc_mapping.py  test_bctc_sector.py  test_bctc_service.py  test_bctc_statements.py  test_bctc_subsector.py  test_bctc_thresholds.py  test_bctc_validation.py  (+37 more)
(+633 files in other folders)
