[project]
name = "iqx-backend"
version = "0.1.0"
description = "IQX Backend API — production-ready FastAPI application"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.15,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyjwt[crypto]>=2.9,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0,<3.0",
    "phonenumbers>=8.13,<9.0",
    "greenlet>=3.0,<4.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "coverage>=7.0,<8.0",
    "factory-boy>=3.3,<4.0",
    "aiosqlite>=0.20,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# Practical incremental strictness — enable more as codebase matures
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Incremental strictness — stricter for new/stable modules
[[tool.mypy.overrides]]
module = [
    "app.services.market_data.*",
    "app.api.v1.endpoints.market_data",
    "app.core.rate_limit",
]
disallow_untyped_defs = true

